# slapi

./: AUTHORS  CONTRIBUTING.md  Makefile  README.md  RELEASE  slapi.py
scripts/: build-rpm.pl
specs/: slapi.spec
src/: Makefile  Makefile.am  autoclean.sh  autogen.sh  configure.ac  slapi.py
